Shut up and deal

--- a/project/app/templates/table_detail.html
+++ b/project/app/templates/table_detail.html
@@ -4,6 +4,9 @@
 
 OK so like here's the complete table, Yo:
 
+HEY HERE'S ALL THE CARDS WHEEEE
+{{ table.current_board.cards }}
+
 <ul>
 {% for direction, player in table.as_tuples %}
 
