Placeholder for trick count

--- a/project/app/templates/table_detail.html
+++ b/project/app/templates/table_detail.html
@@ -13,4 +13,10 @@ OK so like here's the complete table, Yo:
 {% endfor %}
 </ul>
 
+I suppose I should put a count of tricks here. OK, fine:
+<ul>
+  <li>North-South: 0</li>
+  <li>East-West: 0</li>
+</ul>
+Happy now, bitch?
 {% endblock content %}
