Placeholders for bidding box and card picker

--- a/project/app/templates/table_detail.html
+++ b/project/app/templates/table_detail.html
@@ -21,4 +21,14 @@
             </ul>
         </div>
     </div>
+    <div>
+      <div>
+        Now, over here we have your bidding box:
+        {{ bidding_box }}
+      </div>
+      <div>
+        And here's your card-picker thingy:
+        {{ card_picker }}
+      </div>
+    </div>
 {% endblock content %}
