Yay, display the dealer

--- a/project/app/templates/table_detail.html
+++ b/project/app/templates/table_detail.html
@@ -7,7 +7,7 @@
         </ul>
     </div>
     <div>
-        And here's a record of the auction and play
+        And here's a record of the auction and play.  The dealer was {{ table.current_handrecord.board.fancy_dealer }}.
         <div>
             Calls
             <ul>
