--- a/project/app/templates/table_detail.html
+++ b/project/app/templates/table_detail.html
@@ -1,7 +1,17 @@
 {% extends "base.html" %}
 {% block content %}
     <div>
-        So like here's a record of the auction and play.  The dealer was {{ table.current_handrecord.board.fancy_dealer }}.
+        Board #{{ table.current_handrecord.board.id }}.
+        {% if table.current_handrecord.board.ns_vulnerable and table.current_handrecord.board.ew_vulnerable %}
+        Both sides vulnerable.
+        {% elif not table.current_handrecord.board.ns_vulnerable and not table.current_handrecord.board.ew_vulnerable %}
+        Neither side vulnerable.
+        {% elif table.current_handrecord.board.ns_vulnerable %}
+        North/South vulnerable.
+        {% else %}
+        East/West vulnerable.
+        {% endif %}
+        The dealer was {{ table.current_handrecord.board.fancy_dealer }}.
         <div>
             <ul>
             {% for index, player, c in table.current_handrecord.annotated_calls %}
@@ -18,7 +28,7 @@
     <div>
         And here's the complete table.
         <ul>
-            {% for player, cards in card_display %}<li>{{ player.as_link }} {{ cards }}</li>{% endfor %}
+            {% for seat, cards in card_display %}<li>{{ seat.named_direction }}:{{ seat.player.as_link }} {{ cards }}</li>{% endfor %}
         </ul>
     </div>
     <div>
