--- a/project/app/templates/table_detail.html
+++ b/project/app/templates/table_detail.html
@@ -2,12 +2,16 @@
 {% block content %}
     <div>
         {{ table.current_handrecord.board }}.
-        <div>
-            <ul>
+        <div class="container">
+
             {% for index, player, c in table.current_handrecord.annotated_calls %}
-            <li>Call #{{ index }}: {{ player }} said {{ c }}</li>
+            <div class="row">
+              <div class="col-2">Call #{{ index }}</div>
+              <div class="col-2">{{ player }}</div>
+              <div class="col-2">{{ c }}</div>
+            </div>
             {% endfor %}
-            </ul>
+
         </div>
         <div>
             <ul>
