Make the hand display bigger

--- a/project/app/templates/table_detail.html
+++ b/project/app/templates/table_detail.html
@@ -22,7 +22,7 @@
     {# Here I've got North at the top, but maybe it should be #}
     {# Declarer at the bottom; or        #}
     {# request.user.player at the bottom #}
-    <div class="container" style="border: 1px solid;">
+    <div class="container fs-1" style="border: 1px solid;">
         <div class="row">
           <div class="col"></div>
           <div class="col">{{ card_display.NORTH.player.name_dir }}: {{ card_display.NORTH.cards }}</div>
