--- a/project/app/templates/player_list.html
+++ b/project/app/templates/player_list.html
@@ -2,7 +2,7 @@
 {% load player_extras %}
 {% block content %}
     {% block player_list %}
-        <table id="player-list">
+        <table id="player-list" class="table">
             <thead>
                 <tr>
                     <th scope="col">Who</th>
