--- a/project/app/templates/base.html
+++ b/project/app/templates/base.html
@@ -50,7 +50,7 @@
                 </ul>
             </div>
         {% endif %}
-        <div id="content">
+        <div id="content" class="container">
             {% block content %}{% endblock %}
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
