--- a/project/app/templates/table_detail.html
+++ b/project/app/templates/table_detail.html
@@ -2,15 +2,15 @@
 {% block content %}
     <div>
         {{ table.current_handrecord.board }}.
-        <div class="container">
-            {% for index, player, c in table.current_handrecord.annotated_calls %}
-                <div class="row">
-                    <div class="col-2">Call #{{ index }}</div>
-                    <div class="col-2">{{ player }}</div>
-                    <div class="col-2">{{ c }}</div>
-                </div>
-            {% endfor %}
+
+        {% for index, player, c in table.current_handrecord.annotated_calls %}
+        <div class="row">
+          <div class="col-2">Call #{{ index }}</div>
+          <div class="col-2">{{ player }}</div>
+          <div class="col-2">{{ c }}</div>
         </div>
+        {% endfor %}
+
         <div>
             <div>
                 Now, over here we have your bidding box:
@@ -26,7 +26,7 @@
     {# Here I've got North at the top, but maybe it should be #}
     {# Declarer at the bottom; or        #}
     {# request.user.player at the bottom #}
-    <div class="container fs-1" style="border: 1px solid;">
+    <div class="fs-1" style="border: 1px solid;">
         <div class="row">
             <div class="col"></div>
             <div class="col">{{ card_display.NORTH.player.name_dir }}: {{ card_display.NORTH.cards }}</div>
