--- a/project/app/templates/table_detail.html
+++ b/project/app/templates/table_detail.html
@@ -32,6 +32,10 @@
             </tbody>
         </table>
 
+        <div>
+        {{ table.current_auction.status }}
+        </div>
+
         {{ bidding_box }}
 
         <div>
