--- a/project/app/templates/table_detail.html
+++ b/project/app/templates/table_detail.html
@@ -2,36 +2,7 @@
 {% block content %}
     <div>
         {{ table.current_handrecord.board }}.
-        <table class="table fs-4">
-            <th>
-                <tr>
-                    <td>
-                        <i>West</i>
-                    </td>
-                    <td>
-                        <i>North</i>
-                    </td>
-                    <td>
-                        <i>East</i>
-                    </td>
-                    <td>
-                        <i>South</i>
-                    </td>
-                </tr>
-            </th>
-            <tbody>
-                {% for row in table.current_auction.fancy_two_dimensional_display %}
-                    <tr>
-                        {% for call in row %}
-                            <td>
-                                {% if call is not None %}{{ call.serialize }}{% endif %}
-                            </td>
-                        {% endfor %}
-                    </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-
+        {% include 'auction-partial.html#auction-partial' %}
         <div>
         {{ table.current_auction.status }}
         </div>
