Idea for having the auction record update asynchronously.
Gotta figure out how to include the actual call in the POST.

--- a/project/app/templates/table_detail.html
+++ b/project/app/templates/table_detail.html
@@ -36,3 +36,6 @@
         </div>
     </div>
 {% endblock content %}
+{% block scripts %}
+{% include 'auction-partial.html#auction-scripts' %}
+{% endblock scripts %}
