--- a/project/app/templates/auction-partial.html
+++ b/project/app/templates/auction-partial.html
@@ -1,7 +1,9 @@
 {% load partials %}
 {% load player_extras %}
 {% partialdef auction-partial %}
-<table class="table fs-4">
+<table
+  id="auction"
+  class="table fs-4">
   <th>
     <tr>
       <td>
@@ -31,3 +33,18 @@
   </tbody>
 </table>
 {% endpartialdef auction-partial %}
+{% partialdef auction-scripts %}
+<script>
+var es = new ReconnectingEventSource('{{ auction_event_source_endpoint }}');
+
+es.addEventListener('message', function (e) {
+    console.log(e.data);
+
+    var d = JSON.parse(e.data) ;
+    // for now, totally ignore the content of the message, and just reload the partial
+    htmx.ajax('GET', '{{ auction_partial_endpoint }}', {target:'#auction', swap:'outerHTML'});
+
+}, false);
+
+</script>
+{% endpartialdef auction-scripts %}
