--- a/project/app/templates/table_detail.html
+++ b/project/app/templates/table_detail.html
@@ -15,9 +15,7 @@
             </ul>
         </div>
     </div>
-    {# TODO: Here I've got North at the top, but maybe it should be #}
-    {# Declarer at the bottom; or        #}
-    {# request.user.player at the bottom #}
+    {# North at the top as per the Bridge Writing Style Guide #}
     <div class="fs-1" style="border: 1px solid;">
         <div class="row">
             <div class="col"></div>
