--- a/project/app/templates/auction-partial.html
+++ b/project/app/templates/auction-partial.html
@@ -38,7 +38,7 @@
 var es = new ReconnectingEventSource('{{ auction_event_source_endpoint }}');
 
 es.addEventListener('message', function (e) {
-    console.log(e.data);
+    console.log("Auction event listener saw " + e.data);
 
     var d = JSON.parse(e.data) ;
     // for now, totally ignore the content of the message, and just reload the partial
