Move the "auction status" indicator ...
... into a div that gets replaced when we load the auction partial.

This way, once the third dude clicks Pass, that indicator changes without requiring the page be reloaded.

--- a/project/app/templates/auction-partial.html
+++ b/project/app/templates/auction-partial.html
@@ -1,37 +1,40 @@
 {% load partials %}
 {% load player_extras %}
 {% partialdef auction-partial %}
-<table
-  id="auction"
-  class="table fs-4">
-  <th>
-    <tr>
-      <td>
-        <i>West</i>
-      </td>
-      <td>
-        <i>North</i>
-      </td>
-      <td>
-        <i>East</i>
-      </td>
-      <td>
-        <i>South</i>
-      </td>
-    </tr>
-  </th>
-  <tbody>
-    {% for row in table.current_auction.fancy_two_dimensional_display %}
-    <tr>
-      {% for call in row %}
-      <td>
-        {% if call is not None %}{{ call.serialize }}{% endif %}
-      </td>
+<div id="auction">
+  {{ table.current_auction.status }}
+
+  <table
+      class="table fs-4">
+    <th>
+      <tr>
+        <td>
+          <i>West</i>
+        </td>
+        <td>
+          <i>North</i>
+        </td>
+        <td>
+          <i>East</i>
+        </td>
+        <td>
+          <i>South</i>
+        </td>
+      </tr>
+    </th>
+    <tbody>
+      {% for row in table.current_auction.fancy_two_dimensional_display %}
+      <tr>
+        {% for call in row %}
+        <td>
+          {% if call is not None %}{{ call.serialize }}{% endif %}
+        </td>
+        {% endfor %}
+      </tr>
       {% endfor %}
-    </tr>
-    {% endfor %}
-  </tbody>
-</table>
+    </tbody>
+  </table>
+</div>
 {% endpartialdef auction-partial %}
 {% partialdef auction-scripts %}
 <script>
