Use the new colorized version of the auction record.

--- a/project/app/templates/auction-partial.html
+++ b/project/app/templates/auction-partial.html
@@ -23,11 +23,11 @@
       </tr>
     </th>
     <tbody>
-      {% for row in table.current_auction.fancy_two_dimensional_display %}
+      {% for row in table.current_auction.fancy_HTML_display %}
       <tr>
         {% for call in row %}
         <td>
-          {% if call is not None %}{{ call.serialize }}{% endif %}
+          {% if call is not None %}{{ call|safe }}{% endif %}
         </td>
         {% endfor %}
       </tr>
