--- a/project/app/templates/player_list.html
+++ b/project/app/templates/player_list.html
@@ -2,6 +2,7 @@
 {% load player_extras %}
 {% block content %}
     {% block player_list %}
+    <h2>Players {{ page_obj.start_index }} through {{ page_obj.end_index }} of {{ extra_crap.total_count }}</h2>
         <table id="player-list" class="table">
             <thead>
                 <tr>
@@ -12,7 +13,7 @@
                 </tr>
             </thead>
             <tbody>
-                {% for player in player_list %}
+                {% for player in page_obj %}
                     <tr style="border: 1px dotted">
                         <td>{{ player|sedate_link:user }}</td>
                         <td>
@@ -31,24 +32,18 @@
                         </td>
                         <td>
                             {% if player.maybe_a_link %}
-                                <form method="post" action="{% url 'app:new-table' player.pk user.player.pk %}">
-                                  {% csrf_token %}
-                                  <input type="submit" value="Table up with these dudes"></input>
-                                </form>
-                            {% endif %}
-                        </td>
-                    </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-    {% endblock player_list %}
+                                <form method="post"
+                                      action="{% url 'app:new-table' player.pk user.player.pk %}">
+                                    {% csrf_token %}
+                                    <input type="submit" value="Table up with these dudes">
+                                </input>
+                            </form>
+                        {% endif %}
+                    </td>
+                </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+{% include 'pagination-controls.html' %}
+{% endblock player_list %}
 {% endblock content %}
-{% block scripts %}
-    <script>
-$(document).ready( function () {
-    $('#player-list').DataTable(
-      {pageLength: 50}
-    );
-} );
-    </script>
-{% endblock %}
