--- a/project/app/templates/auction-partial.html
+++ b/project/app/templates/auction-partial.html
@@ -5,7 +5,7 @@
   {{ table.current_auction.status }}
 
   <table
-      class="table fs-4">
+      class="table">
     <th>
       <tr>
         <td>
