--- a/project/app/templates/table_detail.html
+++ b/project/app/templates/table_detail.html
@@ -4,6 +4,8 @@
         {{ table.current_handrecord.board }}.
         {% include 'auction-partial.html#auction-partial' %}
         {% include 'bidding-box-partial.html#bidding-box-partial' %}
+
+        {# TODO -- omit this.  It's nice for someone like me who has no memory, but it's Not Done® in a duplicate club. #}
         <div>
             <ul>
                 {% for p in table.current_handrecord.plays %}<li>{{ p }}</li>{% endfor %}
