--- a/project/app/templates/base.html
+++ b/project/app/templates/base.html
@@ -20,6 +20,7 @@
         <div>
             <a href="{% url 'app:home' %}">Home</a> | <a href="{% url 'app:lobby' %}">Lobby</a> | <a href="{% url 'app:table' %}">Tables</a>
             | <a href="{% url 'app:players' %}">Players</a>
+            | version <tt>{{ VERSION }}</tt>
         </div>
         <div>
             {% if user.is_authenticated %}
