So many fixes from djlint!

--- a/project/app/templates/auction-partial.html
+++ b/project/app/templates/auction-partial.html
@@ -2,38 +2,36 @@
 {% load player_extras %}
 {% partialdef auction-partial %}
 <div id="auction">
-  {{ table.current_auction.status }}
-
-  <table
-      class="table fs-4">
-    <th>
-      <tr>
-        <td>
-          <i>West</i>
-        </td>
-        <td>
-          <i>North</i>
-        </td>
-        <td>
-          <i>East</i>
-        </td>
-        <td>
-          <i>South</i>
-        </td>
-      </tr>
-    </th>
-    <tbody>
-      {% for row in table.current_auction.fancy_HTML_display %}
-      <tr>
-        {% for call in row %}
-        <td>
-          {% if call is not None %}{{ call|safe }}{% endif %}
-        </td>
-        {% endfor %}
-      </tr>
-      {% endfor %}
-    </tbody>
-  </table>
+    {{ table.current_auction.status }}
+    <table class="table fs-4">
+        <th>
+            <tr>
+                <td>
+                    <i>West</i>
+                </td>
+                <td>
+                    <i>North</i>
+                </td>
+                <td>
+                    <i>East</i>
+                </td>
+                <td>
+                    <i>South</i>
+                </td>
+            </tr>
+        </th>
+        <tbody>
+            {% for row in table.current_auction.fancy_HTML_display %}
+                <tr>
+                    {% for call in row %}
+                        <td>
+                            {% if call is not None %}{{ call|safe }}{% endif %}
+                        </td>
+                    {% endfor %}
+                </tr>
+            {% endfor %}
+        </tbody>
+    </table>
 </div>
 {% endpartialdef auction-partial %}
 {% partialdef auction-scripts %}
