--- a/project/app/templates/home.html
+++ b/project/app/templates/home.html
@@ -1,6 +1,4 @@
 {% extends "base.html" %}
 {% block content %}
-<p>
-  Welcome to the bridge club.
-</p>
+    <p>Welcome to the bridge club.</p>
 {% endblock content %}
