--- a/project/app/templates/registration/login.html
+++ b/project/app/templates/registration/login.html
@@ -1,38 +1,32 @@
 {% extends "base.html" %}
 {% block content %}
-
-{# Scraped from https://docs.djangoproject.com/en/5.0/topics/auth/default/#all-authentication-views #}
-
-{% if form.errors %}
-<p>Your username and password didn't match. Please try again.</p>
-{% endif %}
-
-{% if next %}
-    {% if user.is_authenticated %}
-    <p>Your account doesn't have access to this page. To proceed,
-    please login with an account that has access.</p>
-    {% else %}
-    <p>Please login to see this page.</p>
+    {# Scraped from https://docs.djangoproject.com/en/5.0/topics/auth/default/#all-authentication-views #}
+    {% if form.errors %}<p>Your username and password didn't match. Please try again.</p>{% endif %}
+    {% if next %}
+        {% if user.is_authenticated %}
+            <p>
+                Your account doesn't have access to this page. To proceed,
+                please login with an account that has access.
+            </p>
+        {% else %}
+            <p>Please login to see this page.</p>
+        {% endif %}
     {% endif %}
-{% endif %}
-
-<div>
-<form method="post" action="{% url 'login' %}">
-{% csrf_token %}
-<table>
-<tr>
-    <td>{{ form.username.label_tag }}</td>
-    <td>{{ form.username }}</td>
-</tr>
-<tr>
-    <td>{{ form.password.label_tag }}</td>
-    <td>{{ form.password }}</td>
-</tr>
-</table>
-
-<input type="submit" value="login">
-<input type="hidden" name="next" value="{{ next }}">
-</form>
-</div>
-
+    <div>
+        <form method="post" action="{% url 'login' %}">
+            {% csrf_token %}
+            <table>
+                <tr>
+                    <td>{{ form.username.label_tag }}</td>
+                    <td>{{ form.username }}</td>
+                </tr>
+                <tr>
+                    <td>{{ form.password.label_tag }}</td>
+                    <td>{{ form.password }}</td>
+                </tr>
+            </table>
+            <input type="submit" value="login">
+            <input type="hidden" name="next" value="{{ next }}">
+        </form>
+    </div>
 {% endblock content %}
