--- a/project/app/templates/table_detail.html
+++ b/project/app/templates/table_detail.html
@@ -5,7 +5,6 @@
         {% include 'auction-partial.html#auction-partial' %}
         {% include 'bidding-box-partial.html#bidding-box-partial' %}
         {# TODO -- omit this.  It's nice for someone like me who has no memory, but it's Not Done® in a duplicate club. #}
-
         <div>
             <ul>
                 {% for t in table.current_handrecord.tricks %}
@@ -17,25 +16,23 @@
     </div>
     {# North at the top as per the Bridge Writing Style Guide #}
     <div style="border: 1px solid;">
-        <div class="row"
-             style="display: grid;
-                    grid-template-columns: 1fr 1fr 1fr">
+        <div class="row" style="display: grid; grid-template-columns: 1fr 1fr 1fr">
             <div class="col"></div>
-            <div class="col">{{ card_display.NORTH.player.name_dir }}: {{ card_display.NORTH.cards }}</div>
+            <div class="col">
+                {{ pokey_buttons.NORTH }}{{ card_display.NORTH.player.name_dir }}: {{ card_display.NORTH.cards }}
+            </div>
             <div class="col"></div>
         </div>
-        <div class="row"
-             style="display: grid;
-                    grid-template-columns: 1fr 1fr 1fr">
-            <div class="col">{{ card_display.WEST.player.name_dir }}: {{ card_display.WEST.cards }}</div>
+        <div class="row" style="display: grid; grid-template-columns: 1fr 1fr 1fr">
+            <div class="col">{{ pokey_buttons.WEST }}{{ card_display.WEST.player.name_dir }}: {{ card_display.WEST.cards }}</div>
             <div class="col">{% include 'three-by-three-trick-display-partial.html#three-by-three-trick-display' %}</div>
-            <div class="col">{{ card_display.EAST.player.name_dir }}: {{ card_display.EAST.cards }}</div>
+            <div class="col">{{ pokey_buttons.EAST }}{{ card_display.EAST.player.name_dir }}: {{ card_display.EAST.cards }}</div>
         </div>
-        <div class="row"
-             style="display: grid;
-                    grid-template-columns: 1fr 1fr 1fr">
+        <div class="row" style="display: grid; grid-template-columns: 1fr 1fr 1fr">
             <div class="col"></div>
-            <div class="col">{{ card_display.SOUTH.player.name_dir }}: {{ card_display.SOUTH.cards }}</div>
+            <div class="col">
+                {{ pokey_buttons.SOUTH }}{{ card_display.SOUTH.player.name_dir }}: {{ card_display.SOUTH.cards }}
+            </div>
             <div class="col"></div>
         </div>
     </div>
