--- a/project/app/templates/three-by-three-trick-display-partial.html
+++ b/project/app/templates/three-by-three-trick-display-partial.html
@@ -1,10 +1,11 @@
 {% load partials %}
 {% partialdef three-by-three-trick-display %}
-<div class="three-by-three-yadda-yadda" style="border: 10px dotted;">
+<div class="three-by-three-yadda-yadda">
     {% for row in three_by_three_trick_display.rows %}
-        <div class="row" style="display: grid; grid-template-columns: 1fr 1fr 1fr;">
+        <div class="row" style="display: grid; grid-template-columns: 1fr 1fr 1fr">
             {% for column in row %}
-            <div class="col" style="border: 1px solid;">{{ column }}</div>
+                <div class="col"
+                     {% if column != " " %}style="border: 1px dotted;"{% endif %}>{{ column }}</div>
             {% endfor %}
         </div>
     {% endfor %}
