--- a/project/app/templates/table_detail.html
+++ b/project/app/templates/table_detail.html
@@ -1,7 +1,12 @@
 {% extends "base.html" %}
 {% block content %}
+    <div class="row">
+        <div class="col">
+            <h1>{{ table }}</h1>
+        </div>
+        <div class="col">{{ table.current_handrecord.board }}.</div>
+    </div>
     <div>
-        {{ table.current_handrecord.board }}.
         {% include 'auction-partial.html#auction-partial' %}
         {% include 'bidding-box-partial.html#bidding-box-partial' %}
         {# TODO -- omit this.  It's nice for someone like me who has no memory, but it's Not Done® in a duplicate club. #}
