Display the board in the table list

--- a/project/app/templates/table_list.html
+++ b/project/app/templates/table_list.html
@@ -7,6 +7,7 @@
             <th>
                 <tr>
                     <td>ID</td>
+                    <td>Board</td>
                     <td>players</td>
                     <td>Auction</td>
                     <td>Play</td>
@@ -16,6 +17,9 @@
                 <tr>
                     <td>
                         <a href="{% url 'app:table-detail' table.pk %}">{{ table.pk }}</a>
+                    </td>
+                    <td>
+                        <a href="{% url 'app:table-detail' table.pk %}">{{ table.current_handrecord.board }}</a>
                     </td>
                     <td>
                         <a href="{% url 'app:table-detail' table.pk %}">{{ table.playaz }}</a>
