New, confusingly-named method: "current_auction_status"

--- a/project/app/templates/table_list.html
+++ b/project/app/templates/table_list.html
@@ -25,7 +25,7 @@
                         <a href="{% url 'app:table-detail' table.pk %}">{{ table.playaz }}</a>
                     </td>
                     <td>
-                        <a href="{% url 'app:table-detail' table.pk %}">{{ table.current_auction.status }}</a>
+                        <a href="{% url 'app:table-detail' table.pk %}">{{ table.current_auction_status }}</a>
                     </td>
                     <td>
                         <a href="{% url 'app:table-detail' table.pk %}">{{ table.current_handrecord.status }}</a>
