Add some untested and currently-irrelevant JS

--- a/project/app/templates/table_detail.html
+++ b/project/app/templates/table_detail.html
@@ -15,4 +15,5 @@
 {% block scripts %}
     {% include 'auction-partial.html#auction-scripts' %}
     {% include 'bidding-box-partial.html#bidding-box-scripts' %}
+    {% include 'four-hands-3x3-partial.html#four-hands-3x3-scripts' %}
 {% endblock scripts %}
