--- a/project/app/templates/four-hands-3x3-partial.html
+++ b/project/app/templates/four-hands-3x3-partial.html
@@ -2,7 +2,7 @@
 {% load player_extras %}
 {% partialdef four-hands-3x3-partial %}
 {# North at the top as per the Bridge Writing Style Guide #}
-<div style="border: 1px solid; height: 50%">
+<div id="four-hands" style="border: 1px solid; height: 50%">
     <div class="row" style="display: grid; grid-template-columns: 1fr 1fr 1fr">
         <div class="col"></div>
         <div class="col">
@@ -24,3 +24,25 @@
     </div>
 </div>
 {% endpartialdef four-hands-3x3-partial %}
+{% partialdef four-hands-3x3-scripts %}
+<script>
+var four_hands_event_source = new ReconnectingEventSource('{{ play_event_source_endpoint }}');
+
+four_hands_event_source.addEventListener('message', function (e) {
+    console.log("Play event listener saw " + e.data);
+
+    var d = JSON.parse(e.data) ;
+    if ("play" in d) {
+      // TODO: Reload the partial only if the data indicates that the viewer, or dummy's, hands have changed.
+      htmx.ajax('GET', '{{ four_hands_partial_endpoint }}', {target:'#four-hands, swap:'outerHTML'});
+    }
+
+}, false);
+
+{# TODO: probably redundant, given that other stuff on this same page has the idential error handler #}
+htmx.on("htmx:responseError", function(evt) {
+   alert(evt.detail.xhr.response);
+});
+
+</script>
+{% endpartialdef four-hands-3x3-scripts %}
